--- a/CBriscola.Avalonia/MainWindow.axaml
+++ b/CBriscola.Avalonia/MainWindow.axaml
@@ -192,7 +192,7 @@
 					<ColumnDefinition />
 					<ColumnDefinition />
 					<ColumnDefinition />
-					<ColumnDefinition />
+					<ColumnDefinition Width="auto" />
 				</Grid.ColumnDefinitions>
 				<Label x:Name="NomeUtente" Grid.Row="0" Grid.Column="0" Grid.RowSpan="3">Nome Utente</Label>
 				<Image x:Name="Utente0" Grid.Row="1" Grid.Column="0" Tapped="Image_Tapped"/>
